[package]
name = "wayback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.12"
reqwest = { version = "0.11", features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
md5 = "0.7.0"
chrono = "0.4.31"
jsonxf = "1.1"